# Afribet

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
accounts/: admin.py  kyc.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_emailverificationcode.py
accounts/tests/: test_auth.py
backoffice/: admin.py  models.py  plugins.py
backoffice/migrations/: 0001_initial.py  0002_gamesetting_providersetting.py
backoffice/tests/: test_backoffice.py
bonus/: admin.py  errors.py  models.py  services.py
bonus/migrations/: 0001_initial.py  0002_bonusconversioncounter.py
bonus/tests/: test_bonus.py
compliance/: admin.py  errors.py  models.py  services.py
config/: __init__.py  asgi.py  celery.py  urls.py
core/: config.py  errors.py  models.py  money.py
docs/: CONCEPTION.md
frontend/: forms.py  urls.py  views.py
games/: __init__.py
matchmaking/: apps.py  lifecycle.py  models.py  resolution.py  serializers.py  services.py  tasks.py  urls.py  views.py
notifications/: providers.py  service.py
payments/: models.py  reconciliation.py  serializers.py  services.py  tasks.py  urls.py  views.py
realtime/: consumers.py  middleware.py  routing.py  services.py
requirements/: base.txt  dev.txt
static/css/: app.css
templates/: base.html  challenge_create.html  dashboard.html  landing.html  lobby.html
tests/: test_e2e_boucle_pari.py
wallet/: models.py  services.py  urls.py  views.py
(+126 files in other folders)
