[project]
name = "afribet"
version = "0.1.0"
description = "Plateforme P2P de paris sur jeux traditionnels africains (Songo en premier)."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["docs", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Mise en place de plateau compacte (lisible) dans les tests : points-virgules tolérés.
"**/test_*.py" = ["E702"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py", "*_test.py"]
# Le cœur jeu (games/) est du Python pur testable sans Django ; les apps Django
# utilisent la base de test. asyncio auto pour les consumers Channels (Phase 7).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["games", "core", "accounts", "wallet", "bonus", "payments", "matchmaking", "realtime", "compliance", "backoffice", "frontend", "tests"]
